# License-Plate-with-onnx-

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/headers/: handlerimage.hpp  serverside.hpp
src/scripts/: handlerimage.cpp  inferenceonnx.cpp  platehandler.cpp  serverside.cpp
src/test/: main_test.cpp
src/test/headers/: render_image.hpp  test_tesseract.hpp
src/test/scripts/: render_image.cpp  test_tesseract.cpp
